Update Resume Timeline, Substitute Teaching

--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
             </div>
             <div class="timeline-entry right">
                <h3>Substitute Teacher</h3>
-               <p>November 2023 – May 2024<br>Dayton Area School Consortium</p>
+               <p>November 2023 – Current<br>Dayton Area School Consortium</p>
                <p><small>Instruction</small></p>
                <svg class="rotate-left" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-clipboard-check" viewBox="0 0 16 16">
