Q&A added to Index page.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,40 @@ dk0xl;'......',;;coxO00Oxkkkxo;..     .,oc.
       </div>
     </div>
   </div>
+  
+  <div class="container mt-4 container-vertical-center">
+    <div class="row">
+      <div class="col-lg-6 order-lg-2">
+        <div>
+          <h2 class="pulse-effect text-center">Q & A</h2>
+          <h3>What is your favorite programming language?</h3>
+          <p>C++, though it didn't usurp Java until my second Systems course, wherein I adopted some of Professor "DJ" Rao's passion for it. Today, it's my go-to language for scripting and general coding practice. I admire its efficiency, versatility, and integrative capacity.</p>
+          <h3>Do you prefer in-person or remote work?</h3>
+          <p>I prefer a hybrid approach. Working remotely helps me focus and get into a productive flow, while in-person collaboration allows for faster and more efficient teamwork.</p>
+          <h3>What is your favorite music genre?</h3>
+          <p>I listen most often to big band swing, finding it especially easy to slip into a flow state with. I also play acoustic guitar and flute.</p>
+          <h3>Dogs or cats?</h3>
+          <p>Cats.</p>
+        </div>
+      </div>
+      <div class="col-lg-6 order-lg-1">
+        <div>
+          <h3>What is your favorite latte?</h3>
+          <p>Naoki fragrant yame blend matcha with traditionally processed whole milk, grade B maple syrup, and either cinnamon or peppermint extract.</p>
+          <h3>What have you learned during your education and GLAM-sector "gap"?</h3>
+          <p>
+            <ol>
+              <li>How to command attention and order while maintaining both high energy and clarity of thought for several hours at a time.</li>
+              <li>I learn best while teaching others.</li>
+              <li>How to translate ideas presented with moderate formality into extremely informal language so as to reach audiences with differing levels of literacy.</li>
+            </ol>
+          </p>
+          <h3>What enticed you into the world of coding, data, and analysis?</h3>
+          <p>I discovered during self-study of pathophysiology while taking an anatomy and physiology course that I truly enjoy the systematic nature of physiology. My directive became transparent.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="/scripts/ascii.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" async></script>
